[package]
name = "enigma-node-registry"
version = "0.0.1"
edition = "2021"
license = "MIT"
authors = ["Sébastien TOUILLEUX (Gladius33)"]
description = "Enigma node registry service: register/resolve/check_user/announce/sync/nodes with presence TTL."
repository = "https://github.com/Gladius33/enigma-node-registry"
homepage = "https://github.com/Gladius33/enigma-node-registry"
documentation = "https://docs.rs/enigma-node-registry"
readme = "README.md"
keywords = ["registry", "directory", "presence", "p2p", "enigma"]
categories = ["network-programming"]
rust-version = "1.75"
include = ["src/**", "docs/**", "README.md", "LICENSE", "Cargo.toml", ".gitignore"]

[dependencies]
thiserror = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["timeout", "trace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["serde", "v4"] }

enigma-node-types = { git = "https://github.com/Gladius33/enigma-node-types", version = "0.0.1" }

[dev-dependencies]
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
